--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,5 +1,6 @@
 [defaults]
-inventory = ./dyninventory.py
+#inventory = ./dyninventory.py
+inventory = ./inventory
 remote_user = appuser
 private_key_file = ~/.ssh/appuser
 host_key_checking = False
