--- a/ansible/playbooks/packer_app.yml
+++ b/ansible/playbooks/packer_app.yml
@@ -2,9 +2,5 @@
 - name: Install ruby
   hosts: all
   become: true
-  tasks:
-  - name: Install ruby and required packages
-    apt: 
-      name: ['ruby-full', 'ruby-bundler', 'build-essential'] 
-      update_cache: yes
-      state: present
+  roles:
+   - app
