--- a/ansible/playbooks/packer_db.yml
+++ b/ansible/playbooks/packer_db.yml
@@ -3,28 +3,5 @@
 - name: Install MongoDB 3.2
   hosts: all
   become: true
-  tasks:
-  - name: Add mongo ppa key
-    apt_key: >
-      keyserver=hkp://keyserver.ubuntu.com:80
-      id=EA312927
-      state=present
-  - name: Add mongo sources list
-    lineinfile: >
-      line="deb http://repo.mongodb.org/apt/ubuntu xenial/mongodb-org/3.2 multiverse"
-      dest=/etc/apt/sources.list.d/mongodb-org-3.2.list
-      state=present
-      create=yes
-  - name: Install mongo
-    apt: 
-      name: mongodb-org
-      state: present 
-      update_cache: yes
-  - name: Enable service mongodb
-    service:
-      name: mongod
-      enabled: yes
-  - name: Start service mongodb
-    service:
-      name: mongod
-      state: started
+  roles:
+   - db
